# LausLecture

./: CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.local.json
Lecture1/: 01_points_vectors.py  02_curve utils.py  02_curves.py  02_curves_surfaces.py  03_brep_transform.py  Week1_all.gh  Week1_all.ghx  util_func.py
Lecture2/: 00_get_shape_info.py  01_find_landlocked_parcels.py  02_find_flaglot_parcels.py  03_find_street_housing_blocks.py  AL_D194_11680_20250123.qmd  find_lot.gh  test_lots_in_seoul.qmd  test_lots_in_seoul.shp  test_lots_in_seoul.shx  utils.py
Lecture3/: 00_shp_to_geometry.py  01_shp_to_geometry.py  01_visibility_analysis.py  03_find_street_housing_blocks.py  sample_code.py  shp_to_3d.gh  utils.py
Lecture3-4/: 01_geometry_preprocessing.py  02_buildable_area.py  03_building_line_generation.py  04_floor_by_floor_generation.py
Lecture4/: 01_parking_design.py  01_public_space_design.py  02_parking_design.py  parking_layout_automation.gh  utils.py
Lecture5/: 01_isovist_analysis.py  01_openspace_automation.py  02_parking_design.py  OpenspaceAutomation.gh
Lecture6/: 01_isovist_analysis.py  02_offset_filtering.py
stub/RhinoStub/: Help on module ghpythonlib.componen.txt  ghpythonlib_components.pyi  rhinoscriptsyntax.pyi
stub/RhinoStub/rhino3d-8.19.25132.1001/Eto/: __init__.pyi
stub/RhinoStub/rhino3d-8.19.25132.1001/GH_IO/: __init__.pyi
stub/RhinoStub/rhino3d-8.19.25132.1001/Grasshopper/: __init__.pyi
stub/RhinoStub/rhino3d-8.19.25132.1001/Internal/: __init__.pyi
(+350 files in other folders)
